--- a/src/sass/components/_newsfeed.scss
+++ b/src/sass/components/_newsfeed.scss
@@ -4,15 +4,67 @@
 
     margin-top: 40px;
 
-    .text-input {
-      width: 100%;
-      font-size: 16px;
-      -webkit-border-radius: 5px;
-      -moz-border-radius: 5px;
-      border-radius: 5px;
-      border-color: black;
-    }
+    .input {
 
+      height: 100px;
+
+      .border {
+        border-color: black;
+        border-width: 1px;
+        -webkit-border-radius: 5px;
+        -moz-border-radius: 5px;
+      }
+
+      .left-input {
+        float: left;
+        width: 79%;
+        height: inherit;
+        display: inline-block;
+        .text-input {
+          width: 100%;
+          height: 100%;
+          font-size: 16px;
+        }
+
+      }
+
+      .right-input {
+        float: left;
+        margin-left: 1%;
+        height: inherit;
+        width: 20%;
+
+        .dropzone {
+          width: 100%;
+          height: 100%;
+          border-style: dotted;
+          background-color: #e6e6e6;
+
+          img {
+            width: 200px;
+            height: 200px;
+          }
+
+          .label {
+            color: #2d2d2d;
+            font-weight: normal;
+            font-size: 12px;
+            white-space: pre-wrap;
+
+            .photo-icon {
+              display: block;
+              margin: 5% auto;
+            }
+          }
+
+          .cancel {
+            top: 0;
+            right: 0;
+            font-size: 16px;
+          }
+        }
+      }
+    }
   }
 
 }
