--- a/src/sass/components/_all.scss
+++ b/src/sass/components/_all.scss
@@ -14,6 +14,13 @@ $secondary: $purple;
 $tertiary: $blue;
 $highlight: $teal;
 
+/* Social media colors */
+$twitter: #00aced;
+$facebook: #3b5998;
+$linkedin: #007bb6;
+$instagram: #bc2a8d;
+
+
 body {
   font: 100% $font-stack;
   color: $black;
