--- a/src/sass/components/_newsfeed.scss
+++ b/src/sass/components/_newsfeed.scss
@@ -1,13 +1,11 @@
 .newsFeed {
 
-
   .border {
     border-color: black;
     border-width: 1px;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
   }
-
 
   .user-post {
 
@@ -27,28 +25,66 @@
       width: 20%;
     }
 
-
     .input {
 
-      height: 100px;
+      height: 125px;
 
       .text-input {
         width: 100%;
-        height: 100%;
+        height: 80px;
         font-size: 16px;
         outline: none;
       }
 
+      .social-submit {
+
+        float: right;
+
+        span {
+          font-size: 24px;
+          display: inline-block;
+          vertical-align: middle;
+        }
+
+        .social {
+          padding: 2px !important;
+          margin: 1px !important;
+        }
+
+        .submit-form {
+          margin: 2px 0 2px 5px !important;
+        }
+      }
+
       .dropzone {
+
         width: 100%;
         height: 100%;
+        max-height: 100%;
         border-style: dotted;
         background-color: #e6e6e6;
 
-        img {
-          width: 200px;
-          height: 200px;
+        .img-container {
+          height: 100%;
+          width: 100%;
+          padding: 2%;
+          text-align: center;
+
+          .helper {
+            display: inline-block;
+            height: 100%;
+            vertical-align: middle;
+          }
+          img {
+            margin: auto;
+            max-width: 100%;
+            max-height: 100%;
+            vertical-align: middle;
+            display: inline-block;
+          }
         }
+
+
 
         .label {
           color: #2d2d2d;
@@ -58,7 +94,7 @@
 
           .photo-icon {
             display: block;
-            margin: 5% auto;
+            margin: 7% auto 5% auto;
           }
         }
 
@@ -69,5 +105,13 @@
         }
       }
     }
+  }
+
+  .facebook {
+    background-color: $facebook !important;
+  }
+
+  .twitter {
+    background-color: $twitter !important;
   }
 }
