--- a/src/sass/components/_newsfeed.scss
+++ b/src/sass/components/_newsfeed.scss
@@ -64,23 +64,35 @@
         border-style: dotted;
         background-color: #e6e6e6;
 
-        .img-container {
+        .photo-delete {
+          float: right;
+          position: absolute;
+        }
+
+        .preview-box {
           height: 100%;
           width: 100%;
-          padding: 2%;
-          text-align: center;
+          display: inline-block;
 
-          .helper {
-            display: inline-block;
+
+          .img-container {
             height: 100%;
-            vertical-align: middle;
-          }
-          img {
-            margin: auto;
-            max-width: 100%;
-            max-height: 100%;
-            vertical-align: middle;
-            display: inline-block;
+            width: 100%;
+            padding: 2%;
+            text-align: center;
+
+            .helper {
+              display: inline-block;
+              height: 100%;
+              vertical-align: middle;
+            }
+            img {
+              margin: auto;
+              max-width: 100%;
+              max-height: 100%;
+              vertical-align: middle;
+              display: inline-block;
+            }
           }
         }
 
