--- a/src/sass/components/_newsfeed.scss
+++ b/src/sass/components/_newsfeed.scss
@@ -7,6 +7,22 @@
     -moz-border-radius: 5px;
   }
 
+  .inline {
+    display: inline-block;
+  }
+
+  .facebook {
+    background-color: $facebook !important;
+  }
+
+  .twitter {
+    background-color: $twitter !important;
+  }
+
+  .disabled-social {
+    background-color: $darkGrey !important;
+  }
+
   .user-post {
 
     margin-top: 40px;
@@ -15,7 +31,6 @@
       float: left;
       width: 79%;
       height: inherit;
-      display: inline-block;
     }
 
     .right-input {
@@ -41,6 +56,7 @@
         .social {
           padding: 2px !important;
           margin: 1px !important;
+          outline: none;
         }
 
         .submit-form {
@@ -55,11 +71,12 @@
         max-height: 100%;
         border-style: dotted;
         background-color: #e6e6e6;
+        cursor: pointer;
+        cursor: hand;
 
         .preview-box {
           height: 100%;
           width: 100%;
-          display: inline-block;
 
           .photo-delete {
             right: 16px;
@@ -75,7 +92,6 @@
             text-align: center;
 
             .helper {
-              display: inline-block;
               height: 100%;
               vertical-align: middle;
             }
@@ -84,12 +100,9 @@
               max-width: 100%;
               max-height: 100%;
               vertical-align: middle;
-              display: inline-block;
             }
           }
         }
-
-
 
         .label {
           color: #2d2d2d;
@@ -112,11 +125,16 @@
     }
   }
 
-  .facebook {
-    background-color: $facebook !important;
-  }
+  .paginate {
+    text-align: center;
+    font-size: 16px;
 
-  .twitter {
-    background-color: $twitter !important;
+    .true {
+      color: blue;
+      text-decoration: underline;
+    }
+    .false {
+      cursor: default;
+    }
   }
 }
