--- a/src/sass/components/_all.scss
+++ b/src/sass/components/_all.scss
@@ -19,20 +19,68 @@ body {
   color: $black;
 }
 
+$h1-font-sizes: (
+  null  : 8vw,
+  460px : 40px,
+  1024px : 48px
+);
+
 h1 {
   color: $primary;
+  @include font-size($h1-font-sizes);
 }
+
+$h2-font-sizes: (
+  null  : 6vw,
+  460px : 32px,
+  1024px : 36px
+);
 
 h2 {
   color: $secondary;
+  @include font-size($h2-font-sizes);
 }
+
+$h3-font-sizes: (
+  null  : 24px,
+  460px : 24px,
+  1024px : 28px
+);
 
 h3 {
   color: $tertiary;
+  @include font-size($h3-font-sizes);
 }
 
-p {
-  font-size: 12px;
+$h4-font-sizes: (
+  null  : 20px,
+  460px : 20px,
+  1024px : 24px
+);
+
+h4 {
+  color: $black;
+  @include font-size($h4-font-sizes);
+}
+
+$p-font-sizes: (
+  null  : 16px,
+  480px : 16px,
+  1024px : 20px
+);
+
+p, body, div, a {
+  @include font-size($p-font-sizes);
+}
+
+a {
+  color: $black;
+  text-decoration: none;
+
+  &:hover {
+    color: $black;
+    text-decoration: none;
+  }
 }
 
 .navbar {
