--- a/src/sass/components/_events.scss
+++ b/src/sass/components/_events.scss
@@ -6,6 +6,14 @@
 
 .react-date-field {
   margin: 20px 0;
+
+  .date_picker {
+    min-width: 250px;
+  }
+}
+
+#datePicker {
+  max-width: 450px;
 }
 
 .eventPageEvent{
@@ -28,6 +36,8 @@
 
 .event {
   margin: 10px 0px;
+  display: flex;
+  align-items: center;
 
   .time, .details {
     display: inline-block;
@@ -35,7 +45,6 @@
 
   .time {
     padding: 0px 20px;
-    border-right: 5px solid black;
     vertical-align: super;
 
     p {
@@ -45,6 +54,16 @@
 
   .details {
     padding-left: 20px;
+    border-left: 5px solid black;
+  }
+
+  @media screen and (max-width: 420px) {
+    .time {
+      padding: 0px 10px;
+    }
+    .details {
+      padding-left: 10px;
+    }
   }
 }
 
@@ -58,18 +77,21 @@
     height: 200px;
     border-left: 20px solid black;
 
-    h1 {
-      bottom: 20px;
-      position: absolute;
-      left: 140px;
-      font-size: 46px;
-    }
-
-    .dates {
+    .header {
       position: absolute;
       bottom: 30px;
-      left: 20px;
-      font-size: 24px;
+      display: flex;
+      flex-direction: row;
+      align-items: flex-end;
+
+      .dates {
+        margin: 0 20px 15px;
+        white-space: nowrap;
+
+        h4 {
+          margin: 0;
+        }
+      }
     }
 
     .subscribeButton {
@@ -90,6 +112,12 @@
 
     h2 {
       font-size: 24px;
+    }
+
+    #avoidSubscribeButton {
+      width: 80px;
+      height: 20px;
+      float: right;
     }
   }
 
