--- a/src/sass/components/_people.scss
+++ b/src/sass/components/_people.scss
@@ -1,13 +1,34 @@
+.searchBar {
+  margin: 10px 0 !important;
+}
+
+.sortContainer {
+  display: flex;
+
+  .directionButton {
+    margin: 0 5px 0 0 !important;
+    padding: 0 !important;
+  }
+}
+
 .peopleList {
   .person {
     margin-bottom: 20px;
 
     a {
-      color: black;
+      display: flex;
+      align-items: center;
 
       &:hover {
         color: $blue;
       }
+    }
+
+    img {
+      width: 100px;
+      height: 100px;
+      border-radius: 50px;
+      margin: 0px 20px;
     }
 
     .points-container, img, .info-container {
@@ -17,7 +38,7 @@
 
     .points-container {
       text-align: right;
-      width: 100px;
+      margin: 0px 10px;
 
       .personPoints, .personRank {
         width: 100%;
@@ -31,17 +52,12 @@
 
       .personRank {
         font-size: 16px;
+        white-space: nowrap;
       }
     }
 
-    img {
-      width: 100px;
-      height: 100px;
-      border-radius: 50px;
-      margin: 0px 20px;
-    }
-
     .info-container {
+      flex-grow: 2;
       p {
         margin: 0px;
       }
@@ -49,6 +65,19 @@
       .personName {
         font-size: 28px;
         font-weight: bold;
+      }
+    }
+
+    @media screen and (max-width: 420px) {
+      img {
+        width: 70px;
+        height: 70px;
+        border-radius: 35px;
+        margin: 0px 10px;
+      }
+
+      .points-container {
+        margin: 0px;
       }
     }
   }
