--- a/src/sass/components/_newsfeed.scss
+++ b/src/sass/components/_newsfeed.scss
@@ -37,7 +37,7 @@
     cursor: default;
   }
 
-  span.no_selection {
+  .no-selection {
     -webkit-user-select: none; /* webkit (safari, chrome) browsers */
     -moz-user-select: none; /* mozilla browsers */
     -khtml-user-select: none; /* webkit (konqueror) browsers */
