--- a/src/sass/components/_newsfeed.scss
+++ b/src/sass/components/_newsfeed.scss
@@ -1,10 +1,59 @@
 .newsFeed {
 
+  html.noscroll {
+    position: fixed;
+    overflow-y: scroll;
+    width: 100%;
+  }
+
   .border {
     border-color: black;
     border-width: 1px;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
+  }
+
+  .fullscreen-frame {
+    background-color: rgba(0,0,0,0.8);
+    width: 100%;
+    height: 100%;
+    left: 0px;
+    top: 0px;
+    padding: 5%;
+    position: fixed;
+    z-index: 2000;
+    overflow: hidden;
+  }
+
+  .img-overlay-close {
+    top: 20px;
+    right: 20px;
+    color: $grey;
+    size: 200;
+    position: absolute;
+
+    :hover {
+      color: white;
+    }
+  }
+
+  .img-container {
+    height: 100%;
+    width: 100%;
+    padding: 1%;
+    text-align: center;
+
+    img {
+      margin: auto;
+      max-width: 100%;
+      max-height: 100%;
+      vertical-align: middle;
+    }
+  }
+
+  .helper {
+    height: 100%;
+    vertical-align: middle;
   }
 
   .inline {
@@ -107,28 +156,10 @@
           width: 100%;
 
           .photo-delete {
-            right: 16px;
+            right: 18px;
             position: absolute;
             background-color: white;
             -webkit-border-radius: 10px;
-          }
-
-          .img-container {
-            height: 100%;
-            width: 100%;
-            padding: 1%;
-            text-align: center;
-
-            .helper {
-              height: 100%;
-              vertical-align: middle;
-            }
-            img {
-              margin: auto;
-              max-width: 100%;
-              max-height: 100%;
-              vertical-align: middle;
-            }
           }
         }
 
@@ -144,11 +175,6 @@
           }
         }
 
-        .cancel {
-          top: 0;
-          right: 0;
-          font-size: 16px;
-        }
       }
     }
   }
