--- a/src/sass/components/_all.scss
+++ b/src/sass/components/_all.scss
@@ -24,6 +24,7 @@ $instagram: #bc2a8d;
 body {
   font: 100% $font-stack;
   color: $black;
+  text-align: center;
 }
 
 $h1-font-sizes: (
@@ -169,5 +170,49 @@ button {
 
   &:disabled {
     background-color: $grey !important;
+  }
+
+  &.auth0-lock-social-button {
+    padding: 0 !important;
+  }
+}
+
+#loginContainer {
+  width: 250px;
+  height: 250px;
+  margin-left: auto;
+  margin-right: auto;
+
+  .logo {
+    position: relative;
+    margin-bottom: 30px;
+    margin-top: 100px;
+    width: 100%;
+    height: 100%;
+
+    .c {
+      height: 100%;
+      width: 100%;
+      border-radius: 100%;
+      background-color: $purple;
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+
+    .rest {
+      height: 70%;
+      width: 80%;
+      border-radius: 100%;
+      background-color: white;
+      position: absolute;
+      left: 30%;
+      top: 15%;
+      display: flex;
+      align-items: center;
+      padding-left: 20px;
+      font-family: 'Rubik Mono One', sans-serif;
+      font-size: 23px;
+    }
   }
 }
