--- a/src/sass/components/_newsfeed.scss
+++ b/src/sass/components/_newsfeed.scss
@@ -146,7 +146,6 @@
         width: 100%;
         height: 100%;
         max-height: 100%;
-        border-style: dotted;
         background-color: $grey;
         cursor: pointer;
         cursor: hand;
@@ -205,8 +204,14 @@
         vertical-align: top;
         word-wrap: break-word;
         padding-left: 110px;
+        text-align: left;
         @media screen and (max-width: 359px){
           padding-left: 90px;
+        }
+
+        img {
+          margin-bottom: 15px;
+          width: 100%;
         }
 
         .username {
