--- a/src/sass/components/_all.scss
+++ b/src/sass/components/_all.scss
@@ -199,7 +199,7 @@ button {
     width: 100%;
     height: 100%;
 
-    .c {
+    .logoC {
       height: 100%;
       width: 100%;
       border-radius: 100%;
