--- a/src/sass/components/_home.scss
+++ b/src/sass/components/_home.scss
@@ -33,7 +33,7 @@
   border-radius: 10px;
   width: 100%;
   margin: 20px 0px;
-  text-align: left;
+  text-align: center;
   padding: 20px 30px;
 
   .eventPageEvent {
