--- a/src/sass/components/_all.scss
+++ b/src/sass/components/_all.scss
@@ -164,6 +164,10 @@ a {
   display: none;
 }
 
+.largeTopMargin {
+  margin-top: 50px !important;
+}
+
 button {
   font-size: 16px;
   padding: 10px 15px !important;
