--- a/src/sass/components/_newsfeed.scss
+++ b/src/sass/components/_newsfeed.scss
@@ -223,6 +223,15 @@
           font-size: 16px;
         }
 
+        .right-options {
+          color: #949494;
+          margin: 0.1em 0.1em 0 0;
+
+          .flag {
+            float: right;
+          }
+        }
+
         .soc-bar {
           vertical-align: bottom;
           font-size: 20px;
@@ -235,8 +244,6 @@
           .heart-icon {
             vertical-align: text-bottom;
             margin-right: 5px;
-            cursor: pointer;
-            cursor: hand;
           }
 
           .retweet-button {
