Style and fix branding page

--- a/src/sass/components/_events.scss
+++ b/src/sass/components/_events.scss
@@ -72,7 +72,7 @@
   height: 500px;
   .nameContainer {
     position: relative;
-    background-image: url("https://www.babybedding.com/images/fabric/pink-and-gray-chevron-fabric_large.jpg");
+    background-image: url("http://kingofwallpapers.com/grey-background/grey-background-005.jpg");
     background-size: cover;
     height: 200px;
     border-left: 20px solid black;
