--- a/src/sass/components/_home.scss
+++ b/src/sass/components/_home.scss
@@ -47,4 +47,11 @@
   .contentCard {
     padding: 15px 0px;
   }
+
+  .socialCard {
+    img {
+      width: 70px;
+      margin: 0 20px;
+    }
+  }
 }
