Delete functionality added

--- a/src/sass/components/_newsfeed.scss
+++ b/src/sass/components/_newsfeed.scss
@@ -227,7 +227,7 @@
           color: #949494;
           margin: 0.1em 0.1em 0 0;
 
-          .flag {
+          .right-icons {
             float: right;
           }
         }
