--- a/src/sass/components/_newsfeed.scss
+++ b/src/sass/components/_newsfeed.scss
@@ -189,14 +189,14 @@
       min-height: 102px;
 
 
-      .user-photo-container {
+      .profile-photo {
         position: absolute;
         display: inline-block;
+      }
 
-        .user-photo {
-          height: 80px;
-          width: 80px;
-        }
+      .user-photo {
+        height: 80px;
+        width: 80px;
       }
 
       .post-text {
@@ -246,7 +246,7 @@
             margin-right: 5px;
           }
 
-          .retweet-button {
+          .social-spacing {
             margin-left: 10%;
           }
 
@@ -260,9 +260,13 @@
     }
   }
 
+
+
+
   .paginate {
     text-align: center;
     font-size: 16px;
   }
 
 }
+
