--- a/src/sass/components/_events.scss
+++ b/src/sass/components/_events.scss
@@ -90,6 +90,7 @@
 
         h4 {
           margin: 0;
+          font-weight: bold;
         }
       }
     }
@@ -109,6 +110,7 @@
 
   .info {
     padding: 0 20px;
+    text-align: left;
 
     h2 {
       font-size: 24px;
