--- a/src/sass/components/_newsfeed.scss
+++ b/src/sass/components/_newsfeed.scss
@@ -229,6 +229,7 @@
 
           .right-icons {
             float: right;
+            margin-right: 0px !important;
           }
         }
 
@@ -248,6 +249,15 @@
 
           .social-spacing {
             margin-left: 10%;
+          }
+
+          .date-newsfeed {
+            font-size: 16px;
+            padding-top:0.5em;
+          }
+
+          .date {
+            float: right;
           }
 
           .show-image {
