--- a/src/sass/components/_people.scss
+++ b/src/sass/components/_people.scss
@@ -176,6 +176,20 @@
     }
   }
 
+  .socialMediaInput {
+    display: flex;
+
+    .prefix {
+      width: 100px;
+	  margin: 26px 10px 0 0;
+	  text-align: right;
+    }
+
+    [class^='theme__input'] {
+      flex-grow: 1;
+    }
+  }
+
   &.myProfile {
     .cancel {
       display: none !important;
