--- a/src/sass/components/_people.scss
+++ b/src/sass/components/_people.scss
@@ -183,6 +183,7 @@
       width: 100px;
 	  margin: 26px 10px 0 0;
 	  text-align: right;
+      font-size: 16px;
     }
 
     [class^='theme__input'] {
