--- a/src/sass/components/_events.scss
+++ b/src/sass/components/_events.scss
@@ -127,3 +127,17 @@
     font-size: 16px;
   }
 }
+
+.dateFilter {
+  display: flex;
+
+  label {
+    margin: 30px 20px 0 0;
+    width: 200px;
+    text-align: left;
+  }
+
+  [class^='theme__input'] {
+    flex-grow: 1;
+  }
+}
