tweaks to events and home

--- a/src/sass/components/_events.scss
+++ b/src/sass/components/_events.scss
@@ -16,6 +16,14 @@
   max-width: 450px;
 }
 
+.Select-control {
+  text-align: left;
+
+  .Select-placeholder {
+    font-size: 12px;
+  }
+}
+
 .eventPageEvent{
   a {
     display: table-cell;
@@ -139,14 +147,17 @@
 
 .dateFilter {
   display: flex;
+  padding: 0 10px;
+  overflow: hidden;
 
   label {
-    margin: 30px 20px 0 0;
+    margin: 21px 20px 0 0;
     width: 200px;
     text-align: left;
   }
 
   [class^='theme__input'] {
     flex-grow: 1;
+    padding: 10px 0 !important;
   }
 }
