--- a/src/sass/components/_events.scss
+++ b/src/sass/components/_events.scss
@@ -140,8 +140,20 @@
     }
   }
 
+  .location {
+    padding: 0 10px;
+  }
+
   .description {
-    font-size: 16px;
+    padding: 20px 10px;
+
+    .group {
+      font-weight: bold;
+      margin-bottom: 20px;
+    }
+    p {
+      font-size: 16px;
+    }
   }
 }
 
