--- a/src/sass/components/_newsfeed.scss
+++ b/src/sass/components/_newsfeed.scss
@@ -177,7 +177,7 @@
       }
 
       [class^='theme__cardText'] {
-        padding: 0px 36px;
+        padding: 0px 36px 20px 36px;
       }
 
       [class^='theme__cardActions'] {
