--- a/src/sass/components/_people.scss
+++ b/src/sass/components/_people.scss
@@ -24,14 +24,16 @@
       }
     }
 
-    img {
+    .profilePic {
       width: 100px;
       height: 100px;
       border-radius: 50px;
       margin: 0px 20px;
+      background-position: center;
+      background-size: cover;
     }
 
-    .points-container, img, .info-container {
+    .points-container, .profilePic, .info-container {
       display: inline-block;
       vertical-align: -webkit-baseline-middle;
     }
@@ -69,7 +71,7 @@
     }
 
     @media screen and (max-width: 420px) {
-      img {
+      .profilePic {
         width: 70px;
         height: 70px;
         border-radius: 35px;
@@ -100,10 +102,12 @@
     position: relative;
     margin: 0px auto;
 
-    img {
+    .profilePic {
       width: 200px;
       height: 200px;
       border-radius: 100px;
+      background-position: center;
+      background-size: cover;
     }
 
     .cancel, .label {
