reimplement linking accounts for social posting

--- a/src/sass/components/_people.scss
+++ b/src/sass/components/_people.scss
@@ -180,6 +180,14 @@
     }
   }
 
+  #linkAccountContainer {
+    margin-top: 50px;
+
+    .social-svg {
+      border-radius: 50%;
+    }
+  }
+
   .socialMediaInput {
     display: flex;
 
