--- a/src/sass/components/_newsfeed.scss
+++ b/src/sass/components/_newsfeed.scss
@@ -105,24 +105,9 @@
       border: none;
     }
 
-    [class^='theme__cardMedia'] > [class^='theme__content']:hover {
-      background-color: rgba(255, 255, 255, 0.5);
-
-      .photo-delete {
-        color: black;
-      }
+    #photoEditContainer {
+      margin-top: 10px;
     }
-
-    .photo-delete {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      color: rgba( 150, 150, 150, 0.8);
-
-      &:hover {
-         opacity: 0.5;
-      }
-     }
 
     [class^='theme__cardTitle'] {
       padding: 30px 36px;
